app/assets/stylesheets/pages/pipelines.scss
@mixin flat-connector-before($length: 44px) {
  &::before {
    content: '';
    position: absolute;
    top: 48%;
    left: -$length;
    border-top: 2px solid $border-color;
    width: $length;
    height: 1px;
  }
}

@mixin build-content($border-radius: 30px) {
  display: inline-block;
  padding: 8px 10px 9px;
  width: 100%;
  border: 1px solid $border-color;
  border-radius: $border-radius;
  background-color: $white;

  &:hover {
    background-color: $gray-darker;
    border: 1px solid $dropdown-toggle-active-border-color;
    color: $gl-text-color;
  }
}

.pipelines {
  .negative-margin-top {
    margin-top: -$pipelines-table-header-height;
  }

  .stage {
    max-width: 90px;
    width: 90px;
    text-align: center;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  .table-holder {
    overflow: unset;
    width: 100%;
  }

  .commit-title {
    margin: 0;
    white-space: normal;

    @include media-breakpoint-down(sm) {
      justify-content: flex-end;
    }
  }

  .ci-table {
    .badge {
      margin-bottom: 3px;
    }

    .pipeline-id {
      color: $black;
    }

    .pipelines-time-ago {
      text-align: right;
    }

    .pipeline-actions {
      min-width: 170px; //Guarantees buttons don't break in several lines.

      .btn-default {
        color: $gl-text-color-secondary;
      }

      .btn.btn-retry:hover,
      .btn.btn-retry:focus {
        border-color: $dropdown-toggle-active-border-color;
        background-color: $white-normal;
      }

      svg path {
        fill: $gl-text-color-secondary;
      }

      .dropdown-menu {
        max-height: $dropdown-max-height;
        overflow-y: auto;
      }

      .dropdown-toggle,
      .dropdown-menu {
        color: $gl-text-color-secondary;

        .fa {
          color: $gl-text-color-secondary;
          font-size: 14px;
        }
      }

      .btn-group.open .btn-default {
        background-color: $white-normal;
        border-color: $border-white-normal;
      }

      .btn .text-center {
        display: inline;
      }

      .tooltip {
        white-space: nowrap;
      }
    }
  }
}

@include media-breakpoint-down(md) {
  .content-list {
    &.builds-content-list {
      width: 100%;
      overflow: auto;
    }
  }
}

.ci-table {
  .build.retried {
    background-color: $gray-lightest;
  }

  .commit-link {
    a {
      &:focus {
        text-decoration: none;
      }
    }

    a:hover {
      text-decoration: none;
    }
  }

  .avatar {
    margin-left: 0;
    float: none;
  }

  .branch-commit {
    .ref-name {
      font-weight: $gl-font-weight-bold;
      max-width: 100px;
      overflow: hidden;
      display: inline-block;
      white-space: nowrap;
      vertical-align: middle;
      text-overflow: ellipsis;
    }

    svg {
      height: 14px;
      width: 14px;
      vertical-align: middle;
      fill: $gl-text-color-secondary;
    }

    .sprite {
      width: 12px;
      height: 12px;
      fill: $gl-text-color;
    }

    .fa {
      font-size: 12px;
      color: $gl-text-color;
    }

    .commit-sha {
      color: $blue-600;
    }

    .badge {
      margin-right: 4px;
    }

    .label-container {
      font-size: 0;

      .badge {
        margin-top: 5px;
      }
    }
  }

  .icon-container {
    display: inline-block;
    width: 10px;

    &.commit-icon {
      width: 15px;
      text-align: center;
    }
  }

  /**
   * Play button with icon in dropdowns
   */
  .no-btn {
    border: 0;
    background: none;
    outline: none;
    width: 100%;
    text-align: left;

    .icon-play {
      position: relative;
      top: 2px;
      margin-right: 5px;
      height: 13px;
      width: 12px;
    }
  }

  .duration,
  .finished-at {
    color: $gl-text-color-secondary;
    margin: 0;
    white-space: nowrap;

    .fa {
      font-size: 12px;
      margin-right: 4px;
    }

    svg {
      width: 12px;
      height: 12px;
      vertical-align: middle;
      margin-right: 4px;
    }
  }

  .build-link a {
    color: $gl-text-color;
  }

  .btn-group.open .dropdown-toggle {
    box-shadow: none;
  }

  .pipeline-tags .label-container {
    white-space: normal;
  }
}

.stage-cell {
  &.table-section {
    @include media-breakpoint-up(md) {
      min-width: 160px; /* Hack alert: Without this the mini graph pipeline won't work properly*/
      margin-right: -4px;
    }
  }

  .mini-pipeline-graph-dropdown-toggle {
    svg {
      height: $ci-action-icon-size;
      width: $ci-action-icon-size;
      position: absolute;
      top: -1px;
      left: -1px;
      z-index: 2;
      overflow: visible;
    }

    &:hover,
    &:active,
    &:focus {
      svg {
        top: -2px;
        left: -2px;
      }
    }
  }

  .stage-container {
    display: inline-block;
    position: relative;
    vertical-align: middle;
    height: $ci-action-icon-size;
    margin: 3px 0;

    + .stage-container {
      margin-left: 6px;
    }

    // Hack to show a button tooltip inline
    button.has-tooltip + .tooltip {
      min-width: 105px;
    }

    // Bootstrap way of showing the content inline for anchors.
    a.has-tooltip {
      white-space: nowrap;
    }

    &:not(:last-child) {
      &::after {
        content: '';
        width: 7px;
        position: absolute;
        right: -7px;
        top: 11px;
        border-bottom: 2px solid $border-color;
      }
    }

    //delete when all pipelines are updated to new size
    &.mr-widget-pipeline-stages {
      + .stage-container {
        margin-left: 4px;
      }

      &:not(:last-child) {
        &::after {
          width: 4px;
          right: -4px;
          top: 11px;
        }
      }
    }
  }
}

.admin-builds-table {
  .ci-table td:last-child {
    min-width: 120px;
  }
}

// Pipeline visualization
.pipeline-actions {
  border-bottom: 0;
}

.tab-pane {
  &.builds .ci-table tr {
    height: 71px;
  }

  .ci-table {
    thead th {
      border-top: 0;
    }
  }
}
/* ... */

